[Add]sign_in、sign_up

--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -20,8 +20,9 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "登録する" %>
   </div>
 <% end %>
 
-<%= render "user/shared/links" %>
+<p><%= link_to "こちら", new_user_session_path %>からログインしてください。</p>
+
