--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,29 @@
   </head>
 
   <body>
-    
+    <header>
+      <!-- ナビゲーションバー -->
+      <nav class="navbar navbar-light bg-light fixed-top">
+        <!-- タイトル -->
+        <a class="navbar-brand">Itinerary</a>
+        <!-- ハンバーガーメニュー -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- ナビゲーションメニュー -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li>
+             <%= link_to root_path do %>Home<% end %>
+            </li>
+            <li>
+              <%= link_to user_user_path(current_user) do %>マイページ<% end %>
+            </li>
+
+          </ul>
+        </div>
+      </nav>
+    </header>
     <%= yield %>
   </body>
 </html>
