--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,30 +6,24 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <header>
-      <!-- ナビゲーションバー -->
-      <nav class="navbar navbar-light bg-light fixed-top">
-        <!-- タイトル -->
-        <a class="navbar-brand">Itinerary</a>
-        <!-- ハンバーガーメニュー -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <header class="sticky-top">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark text-white">
+        <a>
+          <%= link_to 'Top', root_path, data: {"turbolinks" => false} %>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- ナビゲーションメニュー -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li>
-             <%= link_to root_path do %>Home<% end %>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <%= link_to "マイページ", user_user_path(current_user) %>
             </li>
-            <li>
-              <%= link_to user_user_path(current_user) do %>マイページ<% end %>
-            </li>
-
           </ul>
         </div>
       </nav>
