--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -1,5 +1,12 @@
 <h2>プロフィール編集</h2>
 <%= form_with model: @users, url: user_user_path, method: :patch do |f| %>
-  <%= f.label :氏名 %>
-  <%= f.text_field :name %>
+  <div class="user-name">Name</div>
+    <%= f.text_field :name %>
+  <div class="user-edit-image">Image</div>
+    <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+  <div class="form-body">Introduction</div>
+    <%= f.text_area :introduction %><br>
+  <div class="upload">
+    <%= f.submit " Update User" %>
+  </div>
 <% end %>
