--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,4 +1,4 @@
 <h6><%= @user.name %></h6>
 <p>氏名</p>
 <p>自己紹介</p>
-<%= link_to "編集する",edit_user_user_path, class: "btn btn-success" %>
+<%= link_to "編集する",edit_user_path, class: "btn btn-success" %>
