--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,28 @@
         <header class="sticky-top">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark text-white">
         <a>
-          <%= link_to 'Top', root_path, data: {"turbolinks" => false} %>
+          <%= link_to 'Itinerary', root_path, data: {"turbolinks" => false} %>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <%= link_to "マイページ", user_user_path(current_user) %>
-            </li>
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <%= link_to "マイページ", user_path(current_user) %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to "新規登録", new_user_registration_path %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "ログイン", new_user_session_path %>
+              </li>
+            <% end %>
           </ul>
         </div>
       </nav>
